# mcga-matchers

./: CMakeLists.txt
include/mcga/matchers/: comparison.hpp  composite.hpp  functional.hpp  internal_type_helpers.hpp  iterable.hpp  matcher.hpp  numeric.hpp  pointer.hpp  string.hpp  testing_helpers.hpp  truth.hpp
include/mcga/matchers/detail/: comparison.hpp  composite.hpp  functional.hpp  iterable.hpp  numeric.hpp  pointer.hpp  string.hpp  truth.hpp  type_helpers.hpp
include/mcga/matchers/internal/: comparison.hpp  composite.hpp  functional.hpp  iterable.hpp  numeric.hpp  pointer.hpp  string.hpp  truth.hpp  type_helpers.hpp
tests/: comparison_test.cpp  composite_test.cpp  functional_test.cpp  iterable_test.cpp  numeric_test.cpp  pointer_test.cpp  string_test.cpp  truth_test.cpp
